<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="164dp"
        android:layout_height="61dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="121dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/sign_in1"
        android:textAlignment="center"
        android:textColor="#FF1372"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/signg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="142dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="142dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button1"
        android:layout_width="170dp"
        android:layout_height="52dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="121dp"
        android:text="@string/phone_sign_in"
        app:backgroundTint="#231539"
        app:cornerRadius="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/snd"
        android:layout_width="165dp"
        android:layout_height="47dp"
        android:layout_marginStart="123dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="123dp"
        android:text="@string/login"
        app:backgroundTint="#231539"
        app:cornerRadius="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordText" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="217dp"
        android:layout_height="50dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="100dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email_adresss"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="100dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailText" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="153dp"
        android:layout_height="19dp"
        android:layout_marginStart="129dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="129dp"
        android:layout_marginBottom="16dp"
        android:text="@string/or"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/snd" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="124dp"
        android:layout_height="107dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="130dp"
        android:contentDescription="@string/ieee_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main_logo_ieee" />

    <Button
        android:id="@+id/sigup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="94dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="95dp"
        android:text="@string/no_account_sign_up_now"
        android:textColor="#FF1262"
        app:backgroundTint="#140C21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signg" />

</androidx.constraintlayout.widget.ConstraintLayout>