<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register"
    android:background="@color/background">


    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="78dp"
        android:layout_marginTop="54dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FF1032"
        android:textSize="56sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:hint="@string/email_adresss"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nmeTxt"
        android:autofillHints="" />

    <EditText
        android:id="@+id/PassTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTxt"
        android:autofillHints="" />

    <EditText
        android:id="@+id/nmeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="99dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        android:autofillHints="" />

    <Button
        android:id="@+id/regg"
        android:layout_width="144dp"
        android:layout_height="58dp"
        android:layout_marginStart="133dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="134dp"
        android:text="@string/register1"
        app:backgroundTint="#231539"
        app:cornerRadius="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PassTxt" />

</androidx.constraintlayout.widget.ConstraintLayout>