<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/mobileNumber"
        android:layout_width="194dp"
        android:layout_height="44dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="109dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/snd"
        android:layout_width="133dp"
        android:layout_height="50dp"
        android:layout_marginStart="139dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="139dp"
        android:text="@string/send_otp"
        app:backgroundTint="#231539"
        app:cornerRadius="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobileNumber" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="307dp"
        android:layout_height="92dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="53dp"
        android:fontFamily="@font/alegreya_sans_sc_thin"
        android:text="@string/signin_otp"
        android:textAlignment="center"
        android:textColor="#FF1032"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="234dp"
        android:layout_height="23dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="89dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/enter_ph_number"
        android:textAlignment="center"
        android:textColor="#9A5DFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

</androidx.constraintlayout.widget.ConstraintLayout>