<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".phone2">

    <EditText
        android:id="@+id/otpTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="99dp"
        android:ems="10"
        android:hint="@string/enter_otp"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <Button
        android:id="@+id/verifyButton"
        android:layout_width="111dp"
        android:layout_height="58dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="150dp"
        android:text="@string/verify"
        app:backgroundTint="#231539"
        app:cornerRadius="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otpTextField" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="327dp"
        android:layout_height="56dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="44dp"
        android:fontFamily="@font/alegreya_sans_sc_thin"
        android:text="@string/verifying_otp"
        android:textAlignment="center"
        android:textColor="#FF1032"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="94dp"
        android:layout_marginEnd="141dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/enter_otp_here"
        android:textColor="#9A5DFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />
</androidx.constraintlayout.widget.ConstraintLayout>